applied s3 changes to release 2.1.0
fixed pom versions to align with the 2.1.0 release

--- a/assemble/conf/accumulo.properties
+++ b/assemble/conf/accumulo.properties
@@ -31,3 +31,20 @@ instance.secret=DEFAULT
 
 ## Set to false if 'accumulo-util build-native' fails
 tserver.memory.maps.native.enabled=true
+
+
+## S3 specific deployment configurations
+
+## For S3 you must define volumes for accumulo and its write ahead logs. Replace the defaule instance volumes at the top
+## with the example below. Make sure the volumes match the general.custom.volume.preferred.default, and
+## general.custom.volume.preferred.logger property values below
+# instance.volumes=s3a://<bucket>/accumulo,s3a://<bucket>/accumulo-wal
+
+## Define the S3 objects to use for recording accumulo and write ahead log data
+# general.custom.volume.preferred.default=s3a://<bucket>/accumulo
+# general.custom.volume.preferred.logger=s3a://<bucket>/accumulo-wal
+
+## The default deployment will use a RandomVolumeChooser and HadoopLogCloser and neither of which work when deploying to
+## S3. Remove the comments below to use the volume chooser and log closer that are compatible with S3
+# general.volume.chooser=org.apache.accumulo.core.spi.fs.PreferredVolumeChooser
+# manager.walog.closer.implementation=org.apache.accumulo.server.manager.recovery.S3LogCloser
